--- a/.github/workflows/actions_on_deploy.yml
+++ b/.github/workflows/actions_on_deploy.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Install dependencies
         run: npm ci
   workflows_asked:
+    needs: setup
     runs-on: ubuntu-latest
     steps:
         - name: Install lint
