--- a/.github/workflows/actions_on_deploy.yml
+++ b/.github/workflows/actions_on_deploy.yml
@@ -17,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
         - name: Install lint
-          run: npm lint
+          run: npm run lint
         - name: Run tests
           run: npm test
         - name: Build scripts
