--- a/.github/workflows/actions_on_deploy.yml
+++ b/.github/workflows/actions_on_deploy.yml
@@ -16,11 +16,15 @@ jobs:
     needs: setup
     runs-on: ubuntu-latest
     steps:
+      - - name: Get the code
+          uses: actions/checkout@v3
+        - name: Install dependencies
+          run: npm ci
         - name: Install lint
           run: npm run lint
         - name: Run tests
-          run: npm test
+          run: npm run test
         - name: Build scripts
-          run: npm build
+          run: npm run build
         - name: Message
           run: echo "Deploying project as part of workflow"
